# fillenv

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: pypi.yml  testpypi.yml
src/fillenv/: __init__.py  __main__.py  cli.py  constants.py  parser.py  prompt.py  serialize.py
tests/: test_parser.py  test_prompt.py  test_serialize.py
